# gnuspeech_sa

./: .gitignore  CMakeLists.txt  INSTALL  INSTALL.txt  NOTES  NOTES.txt  README  README.md  TODO  gnuspeechsa.pc.pre  the_chaos.txt
data/: 2.0eMainDictionary  MainDictionary  monet.xml  trm.config  trm_control_model.config  voices.config  vowelTransitions_2
data/en/: MainDictionary  MainDictionary.txt  README.txt  monet.xml  trm.config  trm_control_model.config  trm_control_model.txt  voice_baby.txt  voice_female.config  voice_large_child.txt  voice_male.txt  voice_small_child.txt
scripts/: test.sh
src/: Dictionary.cpp  Dictionary.h  Exception.h  KeyValueFileReader.cpp  KeyValueFileReader.h  Log.cpp  Log.h  Text.cpp  Text.h  VocalTractModelParameterValue.h  WAVEFileWriter.cpp  WAVEFileWriter.h  global.h  main.cpp  number_pronunciations.h
src/en/: number_pronunciations.h
src/en/dictionary/: DictionarySearch.cpp  DictionarySearch.h
src/en/letter_to_sound/: apply_stress.cpp  apply_stress.h  check_word_list.cpp  check_word_list.h  clusters.h  ends_with.cpp  ends_with.h  final_s.cpp  final_s.h  ie_to_y.cpp  ie_to_y.h  insert_mark.cpp  insert_mark.h  isp_trans.cpp  isp_trans.h  letter_to_sound.cpp  letter_to_sound.h  long_medial_vowels.cpp  long_medial_vowels.h  mark_final_e.cpp  mark_final_e.h  medial_s.cpp  medial_s.h  medial_silent_e.cpp  medial_silent_e.h  member.cpp  member.h  stresstables.h  suffix.cpp  suffix.h  syllabify.cpp  syllabify.h  tail.h  vowel_before.cpp  vowel_before.h  word_to_patphone.cpp  word_to_patphone.h
src/en/main_dict/: MainDictionary.cpp  MainDictionary.h  suffix_list.h
src/en/phonetic_string_parser/: PhoneticStringParser.cpp  PhoneticStringParser.h
src/en/text_parser/: NumberParser.cpp  NumberParser.h  TextParser.cpp  TextParser.h  abbreviations.h  number_parser.cpp  number_parser.h  special_acronyms.h
src/letter_to_sound/: apply_stress.cpp  apply_stress.h  check_word_list.cpp  check_word_list.h  clusters.h  ends_with.cpp  ends_with.h  final_s.cpp  final_s.h  ie_to_y.cpp  ie_to_y.h  insert_mark.cpp  insert_mark.h  isp_trans.cpp  isp_trans.h  letter_to_sound.cpp  letter_to_sound.h  long_medial_vowels.cpp  long_medial_vowels.h  mark_final_e.cpp  mark_final_e.h  medial_s.cpp  medial_s.h  medial_silent_e.cpp  medial_silent_e.h  member.cpp  member.h  stresstables.h  suffix.cpp  suffix.h  syllabify.cpp  syllabify.h  tail.h  vowel_before.cpp  vowel_before.h  word_to_patphone.cpp  word_to_patphone.h
src/main_dict/: MainDictionary.cpp  MainDictionary.h  suffix_list.h
src/text_parser/: TextParser.cpp  TextParser.h  abbreviations.h  number_parser.cpp  number_parser.h  special_acronyms.h
src/trm/: BandpassFilter.cpp  BandpassFilter.h  FIRFilter.cpp  FIRFilter.h  INFO  MovingAverageFilter.h  NoiseFilter.cpp  NoiseFilter.h  NoiseSource.cpp  NoiseSource.h  RadiationFilter.cpp  RadiationFilter.h  ReflectionFilter.cpp  ReflectionFilter.h  SampleRateConverter.cpp  SampleRateConverter.h  TRMConfiguration.cpp  TRMConfiguration.h  Throat.cpp  Throat.h  Tube.cpp  Tube.h  WavetableGlottalSource.cpp  WavetableGlottalSource.h  gnuspeech_trm.cpp
src/trm_control_model/: Category.cpp  Category.h  ConfigFile.cpp  ConfigFile.h  Controller.cpp  Controller.h  DriftGenerator.cpp  DriftGenerator.h  Equation.cpp  Equation.h  EventList.cpp  EventList.h  FormulaSymbol.cpp  FormulaSymbol.h  IntonationPoint.cpp  IntonationPoint.h  Model.cpp  Model.h  Parameter.cpp  Parameter.h  Phone.cpp  Phone.h  Posture.h  PostureList.cpp  PostureList.h  Rule.cpp  Rule.h  StringParser.cpp  StringParser.h  Symbol.h  TRMControlModelConfiguration.cpp  TRMControlModelConfiguration.h  Transition.cpp  Transition.h  XMLConfigFile.cpp  XMLConfigFile.h  XMLConfigFileReader.cpp  XMLConfigFileReader.h  XMLConfigFileWriter.cpp  XMLConfigFileWriter.h
src/xml/: RapidXmlUtil.h  SimpleXMLParser.cpp  SimpleXMLParser.h  StreamXMLWriter.h
